# oti_oti_fight

./: .gitignore  CMakeLists.txt
include/: Board.h  Client.h  Config.h  Direction.h  GameData.h  GameScene.h  Input.h  NCursesUtil.h  Player.h  ResultScene.h  SceneBase.h  SceneManager.h  Server.h  Timer.h  TitleScene.h
src/: Board.cpp  CMakeLists.txt  Client.cpp  GameScene.cpp  Input.cpp  NCursesUtil.cpp  Player.cpp  ResultScene.cpp  Server.cpp  Timer.cpp  TitleScene.cpp  main.cpp
test/: CMakeLists.txt  TestBoard.cpp  TestPlayer.cpp  TestSceneManager.cpp
